Fix hr on tablet and desktop view

--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,12 @@ hr {
     margin: 0 32px;
 }
 
+@media screen and (min-width: 768px) {
+    hr {
+        margin: 0;
+    }
+}
+
 .introduction {
     display: flex;
     flex-direction: column;
